Correct return values of Linux test-and-set operations (PR 48999).

Linux's Documentation/atomic_ops.txt says in no uncertain terms these
must return 0 or 1, not zero or nonzero.  I don't think this has
caused an issue for drm (yet), but better to have it right.